# Antares_Simulator

./: .gitignore  .gitmodules  AUTHORS.txt  AbstractStartUpCostsGroup_8h_source.html  AreaBalance_8h_source.html  AreaHydroLevelGroup_8h_source.html  AreaHydroLevel_8h_source.html  AssertionError_8hpp_source.html  BindingConstraintDayGroup_8h_source.html  BindingConstraintDay_8h_source.html  BindingConstraintGroupRepository_8h_source.html  BindingConstraintGroup_8h_source.html  BindingConstraintHour_8h_source.html  BindingConstraintLoader_8h_source.html  BindingConstraintSaver_8h_source.html  BindingConstraintStructures_8h_source.html  BindingConstraintWeekGroup_8h_source.html  BindingConstraintWeek_8h_source.html  BindingConstraint_8h_source.html  BindingConstraint_8hxx_source.html  BindingConstraintsRepository_8h_source.html  BindingConstraintsRepository_8hxx_source.html  BindingConstraintsTSNumbersData_8h_source.html  BindingConstraintsTimeSeriesNumbersWriter_8h_source.html  CERTIFICATE.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.txt  COPYING.txt  ConsistenceNumberOfDispatchableUnitsGroup_8h_source.html  ConsistenceNumberOfDispatchableUnits_8h_source.html  ConstraintBuilder_8h_source.html  ConstraintGroup_8h_source.html  CsrAreaBalance_8h_source.html  CsrBindingConstraintHour_8h_source.html  CsrFlowDissociation_8h_source.html  Doxyfile  DurationCollector_8h_source.html  Enum_8hpp_source.html  Enum_8hxx_source.html  (+4299 more)
Antares/tools/kirchhoff-cbuilder/: CMakeLists.txt  main.cpp
src/: .clang-format  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  FindCURL.cmake  FindOpenSSL.cmake  FindWXWidgets.cmake  changelog.mdown  cmake_clean.sh  config.h  config.h.cmake  format-code.sh  libcurl_openssl.cmake  script_compilation  vcpkg.json
src/analyzer/: CMakeLists.txt  main.cpp
src/analyzer/atsp/: atsp.cpp  atsp.h  atsp.hxx  cache.cpp  correlations.cpp  load.cpp  misc.cpp  preflight.cpp
src/analyzer/win32/: analyzer.rc.cmake
src/api/: API.cpp  CMakeLists.txt  SimulationObserver.cpp  SimulationResults.cpp  solver.cpp
src/api/private/: API.h  SimulationObserver.h
src/api_client/src/: API_client.h
src/api_client/tests/: test.cpp
src/api_client_example/: CMakeLists.txt  README.md  vcpkg.json
src/api_client_example/src/: API_client.cpp  API_client.h  CMakeLists.txt
src/api_client_example/tests/: CMakeLists.txt  test.cpp
src/cmake/: CodeCoverage.cmake  FindwxWidgets.cmake  changelog.cmake  checks.cmake  common-settings.cmake  ensure_ortools.cmake  ensure_sirius.cmake  libcurl_openssl.cmake  utils.cmake  wxWidgets.cmake
src/cmake/dependencies/: CMakeLists.txt  CMakeLists.txt.in
src/cmake/wxWidgets/: FindwxWidgets.cmake
src/config/: CMakeLists.txt  config.cpp
src/distrib/: CMakeLists.txt  CMakeLists.txt.in
src/distrib/unix/: common.sh  packages.cmake
src/distrib/win32/: NSIS.template.in  build.template.cmake  examplesfiles.inc.nsh  extension.nsh  make-zip-from-installer.cmake  sourcefiles.inc.nsh  ui.nsh  uninstall-folders.inc.nsh  version.cmake
src/ext/: ext changelog.txt
src/ext/Sirius_Solver/: CMakeLists.txt  LICENSE.txt
src/ext/yuni/: AUTHORS.txt  license.md
src/internet/: CMakeLists.txt  decrypt.hxx  getstarttime.cpp  getstarttime.h  hello_web.cpp  host-properties.cpp  license.h  licensecacert.h  licensekey.example.txt  licensetimer.cpp  licensetimer.h  limits.cpp  limits.h
src/internet/base64/: CMakeLists.txt  cdecode.c  cdecode.h  cencode.c  cencode.h  decode.h  encode.h
src/internet/keys/: CMakeLists.txt  allkeys.hxx  key.hostkey.pem  key.hostkey.pub  key.licensekey.pem  key.licensekey.pub  main.cpp  readme.txt  update-all-keys.sh
src/libs/antares/: CMakeLists.txt  Doxygen.txt  Enum.hpp  Enum.hxx  antares.h  antares_locale.h  benchmarking.h  config.h  constants.cpp  constants.h  date.h  emergency.cpp  emergency.h  fatal-error.cpp  fatal-error.h  hostinfo.cpp  hostinfo.h  inifile.h  jit.h  locale.cpp  locale.h  logs.h  proxy.h  solver.cpp  solver.h  string-to-double.cpp  string-to-double.h  study.h  timeelapsed.h  utils.cpp  utils.h  utils.hxx  version.cpp  version.h  wx-wrapper.h  xpansion.h
src/libs/fswalker/: CMakeLists.txt  filejob.inc.hxx  fswalker.cpp  fswalker.h  job.cpp  job.h  registry.inc.hxx  statistics.h
src/packaging/: CMakeLists.txt  Config.cmake.in
src/patches/: 0001-remove-gflags.patch  xpansion-patches.patch
src/ports/cucumber-cpp/: patch_git_version.patch  portfile.cmake  vcpkg.json
src/ports/ortools-rte/: portfile.cmake  vcpkg.json
src/ports/sirius-solver/: portfile.cmake  vcpkg.json
src/solver/: CMakeLists.txt  Config.cmake.in  Doxygen.txt  application.cpp  application.h  application.hxx  config.h  exceptions.h  main.cpp  main.h  main.hxx
src/solver/aleatoire/: CMakeLists.txt  alea_fonctions.h  alea_sys.h  alea_tirage_au_sort_chroniques.cpp
src/solver/application/: CMakeLists.txt  ScenarioBuilderOwner.cpp  application.cpp  application.h  process-priority.cpp
src/solver/cmake/: constraints-builder.cmake  hydro.cmake  infeasible-diag.cmake  infeasible-problem-analysis.cmake  log-sink.cmake  main.cmake  randomness.cmake  simulation.cmake  solver.cmake  ts-generator.cmake  variable.cmake  writer.cmake
src/solver/constraints-builder/: CMakeLists.txt  cbuilder.cpp  cbuilder.h  create.cpp  grid.h  grid.hxx  load.cpp
src/solver/expressions/: Add.cpp  AddNode.cpp  CMakeLists.txt  CloneVisitor.cpp  ComponentNode.cpp  DeleteVisitor.cpp  EvalVisitor.cpp  Leaf.cpp  Literal.cpp  Negate.cpp  NegationNode.cpp  Parameter.cpp  PortFieldNode.cpp  PrintVisitor.cpp  StringVisitor.cpp  hashable.cpp  main.cpp  visitor.cpp
src/solver/hydro/: CMakeLists.txt  management.h
src/solver/infeasible-diag/: problem.cpp  problem.h  report.cpp  report.h
src/tests/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/triplets/: x64-linux-antares.cmake  x64-linux-release.cmake  x64-windows-antares.cmake  x64-windows-release.cmake
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cmake/: common-settings.cmake
tests/examples/: requirements.txt
tests/run-study-tests/: readme.md
tests/src/: CMakeLists.txt
(+12869 files in other folders)
